minor styling fixes -removed horizontal scroll when opening modal -centered form in modal

--- a/src/components/Input/Inputt.scss
+++ b/src/components/Input/Inputt.scss
@@ -4,12 +4,15 @@
 .input-container{
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     margin: 0.3rem 0;
+    &>div{
+        justify-content: center;
+        text-align: center;
+    }
+
     span{
-        // align-self: flex-start;
-        // width: 30%;
-        margin-left: -9rem;
+        text-align: start;
+        margin-left: 3.3rem;
         margin-bottom: 0.2rem;
         font-weight: bold;
         font-size: 0.7rem;
@@ -30,6 +33,8 @@
         border-width: 0;
         padding-left: 0.4rem;
         background: $grey-1;
+        width: 16rem;
+        
     }
 }
 
